- The option for blog post is no longer not visible when scrolling down the page (conflicting styles). - Removed the "Post Status?" header when posting a status. This is assumed! - Made buttons for posting smaller. - Other small changes.
git-svn-id: https://subversion.assembla.com/svn/mapler-me@761 7cbc8f23-9b70-4854-b091-be65f742de0c

--- a/trunk/website/inc/css/style.css
+++ b/trunk/website/inc/css/style.css
@@ -37,7 +37,6 @@ body {
 		background: rgba(255,255,255,0.9);
 		border-radius: 5px;
 		padding: 10px;
-		color: #FFF;
 		top:140px;
 		-webkit-box-shadow: 0 0 0 1px rgba(0,0,0,0.18),0 0 5px 0 rgba(0,0,0,0.2);
 		-moz-box-shadow: 0 0 0 1px rgba(0,0,0,0.18),0 0 5px 0 rgba(0,0,0,0.2);
